Cleanup pom.xml